--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -11,6 +11,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.cabbage.shortlink</groupId>
+            <artifactId>shortlink-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
