--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>admin</module>
         <module>project</module>
         <module>gateway</module>
+        <module>common</module>
     </modules>
 
     <properties>
