--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -20,3 +20,8 @@ short-link:
   stats:
     locale:
       amap-key: test
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:/mapper/**/*.xml
