--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -22,6 +22,16 @@ short-link:
   stats:
     locale:
       amap-key: test
+  goto-domain:
+    where-list:
+      enable: true
+      names: 'test1,知乎,掘金,博客园'
+      details:
+        - nageoffer.com
+        - zhihu.com
+        - juejin.cn
+        - cnblogs.com
+
 
 mybatis-plus:
   configuration:
